turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:9: error: not found: value set
          set.colorBrosse(colors(0))
          ^LangtonsAnt:11: error: not found: value setcolorBrosse
          setcolorBrosse(colors(i+1))
          ^